--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "one-word-array",
+  "name": "fet-week6assignment",
   "version": "1.0.0",
   "description": "",
-  "main": "onewordArr.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
